# propertyeditor

./: CMakeLists.txt  SetPaths.cmake  compile_report
cmake/modules/: FindPaths.cmake  FindPropertyEditor.cmake
debian/: changelog  control  copyright  libpropertyeditor-dev.install  libpropertyeditor.install  propertyeditor-plugins.install  rules
examples/: example.cpp
lib/: CMakeLists.txt  lib.pro  propertydelegate.cpp  propertydelegate.h  propertyeditor.cpp  propertyeditor.h  propertyinterface.cpp  propertyinterface.h  propertymodel.cpp  propertymodel.h  propertyvalidator.h
plugins/: CMakeLists.txt  plugins.pro
plugins/bool/: CMakeLists.txt  bool.cpp  bool.h  bool.pro  resource.qrc
plugins/brush/: CMakeLists.txt  brush.cpp  brush.h  brush.pro
plugins/color/: CMakeLists.txt  changecolor.cpp  changecolor.h  color.cpp  color.h  color.pro
plugins/date/: CMakeLists.txt  date.cpp  date.h  date.pro
plugins/dateTime/: CMakeLists.txt  dateTime.pro  datetime.cpp  datetime.h
plugins/enums/: CMakeLists.txt  enums.cpp  enums.h  enums.pro
plugins/flags/: CMakeLists.txt  flags.cpp  flags.h  flags.pro  flagsList.ui  flagslist.cpp  flagslist.h
plugins/font/: CMakeLists.txt  changefont.cpp  changefont.h  font.cpp  font.pro
plugins/metricfont/: CMakeLists.txt  changefont.cpp  font.cpp  font.h  metricfont.pro  metricfontdialog.cpp  metricfontdialog.h  metricfontdialog.ui
plugins/numbers/: CMakeLists.txt  numbers.cpp  numbers.h  numbers.pro
plugins/pen/: CMakeLists.txt  pen.cpp  pen.h  pen.pro
plugins/pixmap/: CMakeLists.txt  pixmap.cpp  pixmap.h  pixmap.pro  pixmapDialog.ui  pixmapdialog.cpp  pixmapdialog.h
plugins/rect/: CMakeLists.txt  rect.cpp  rect.h  rect.pro
plugins/rectf/: CMakeLists.txt  rectf.cpp  rectf.h  rectf.pro
plugins/size/: CMakeLists.txt  size.cpp  size.h  size.pro
plugins/sizef/: CMakeLists.txt  sizef.cpp  sizef.h  sizef.pro
plugins/stringlist/: CMakeLists.txt  stringlist.cpp  stringlist.h  stringlist.pro  stringlisteditor.cpp  stringlisteditor.h  stringlisteditor.ui
plugins/strings/: CMakeLists.txt  strings.cpp  strings.h  strings.pro
plugins/time/: CMakeLists.txt  time.pro  timeprop.cpp  timeprop.h
